@@ -1,3 +1,8 @@
+2001-12-04  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* Display/KAPVIEW.pm (select_section): Fix warnings when
+	compressing or no CUT present
+
 2001-11-07  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* Display/GAIA.pm (send_to_gaia): Attempt to catch null string
